--- a/sobre.html
+++ b/sobre.html
@@ -1,14 +1,14 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
     <title>Sobre Mirror Fashion</title>
 </head>
 <body>
-    <img src="img/logo.png">
+    <img src="img/logo.png" alt="logotipo mirror fashion">
     <h1>A Mirror Fashion</h1>
         <p>
-            A Mirror Fashion é a maior empresa comércio eletrônico no segmento de moda em todo o mundo. 
+            A <strong>Mirror Fashion</strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo. 
             Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de 
             participação em 118 deles.
         </p>
@@ -17,19 +17,26 @@
             Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 aviões que 
             distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:
         </p>
-
+        <figure>
+            <img src="img/centro-distribuicao.png">
+            <figcaption>Centro de distruição da Mirror Fashion</figcaption>
+        </figure>
         <p>
             Compre suas roupas e acessórios na Mirror Fashion. Acesse nossa loja ou entre em contato 
             se tiver dúvidas. Conheça também nossa história e nossos diferenciais.
         </p>
 
     <h2>história</h2>
+        <figure>
+            <img src="img/familia-pelho.jpg">
+            <figcaption>Família Pelho</figcaption>
+        </figure>
         <p>
             A fundação em 1932 ocorreu no momento da descoberta econônica do interior do Paraná. A 
-            família Pelho, tradicional da região, investiu todas as suas economias nessa nova iniciativa, 
-            revolucionária para a época. O fundador Eduardo Simões Pelho, dotado de particular visão 
+            família <em>Pelho</em>, tradicional da região, investiu todas as suas economias nessa nova iniciativa, 
+            revolucionária para a época. O fundador <em>Eduardo Simões Pelho</em>, dotado de particular visão 
             administrativa, guiou os negócios da empresa durante mais de 50 anos, muitos deles ao lado 
-            de seu filho E. S. Pelho Filho, atual CEO. O nome da empresa é inspirado no nome da família.
+            de seu filho <em>E. S. Pelho Filho</em>, atual CEO. O nome da empresa é inspirado no nome da família.
         </p>
 
         <p>
@@ -39,7 +46,7 @@
         </p>
 
         <p>
-            Dada a importância econômica da empresa para o Brasil, a família Pelho já recebeu diversos prêmios, 
+            Dada a importância econômica da empresa para o Brasil, a família <em>Pelho</em> já recebeu diversos prêmios, 
             homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror 
             Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.
         </p>
