--- a/sobre.html
+++ b/sobre.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sobre Mirror Fashion</title>
+    <link rel="stylesheet" href="css/sobre.css">
 </head>
 <body>
     <img src="img/logo.png" alt="logotipo mirror fashion">
@@ -14,20 +15,20 @@
         </p>
 
         <p>
-            Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 aviões que 
+            Nosso centro de distribuição fica em <a href="https://maps.google.com.br/?q=Jacarezinho">Jacarezinho, no Paraná</a>. De lá, saem 48 aviões que 
             distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:
         </p>
-        <figure>
+        <figure id="centro-distribuicao">
             <img src="img/centro-distribuicao.png">
             <figcaption>Centro de distruição da Mirror Fashion</figcaption>
         </figure>
         <p>
-            Compre suas roupas e acessórios na Mirror Fashion. Acesse nossa loja ou entre em contato 
-            se tiver dúvidas. Conheça também nossa história e nossos diferenciais.
+            Compre suas roupas e acessórios na Mirror Fashion. Acesse <a href="index.html">nossa loja</a> ou entre em contato 
+            se tiver dúvidas. Conheça também nossa <a href="#historia">história</a> e nossos <a href="#diferenciais">diferenciais</a>.
         </p>
 
-    <h2>história</h2>
-        <figure>
+    <h2 id="historia">História</h2>
+        <figure id="familia-pelho">
             <img src="img/familia-pelho.jpg">
             <figcaption>Família Pelho</figcaption>
         </figure>
@@ -50,5 +51,21 @@
             homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror 
             Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.
         </p>
+
+    <h2 id="diferenciais">Diferenciais</h2>
+    <ul>
+        <li>Menor preço do varejo, garantido</li>
+        <li>Se você achar uma loja mais barata, leva o produto de graça</li>
+        <li>Pague em reais, dólares, euros ou bitcoins</li>
+        <li>Todas as compras com frete grátis para o mundo todo</li>
+        <li>Maior comércio eletrônico de moda do mundo</li>
+        <li>Atendimento via telefone, email, chat, twitter, facebook, carta, fax e telegrama</li>
+        <li>Presente em 124 países</li>
+        <li>Mais de um milhão de funcionários em todo o mundo</li>
+    </ul>
+    <div id="rodape">
+        <img src="img/logo.png">
+        &copy; Copyright Mirror Fashion
+    </div>
 </body>
 </html>
