--- a/index.html
+++ b/index.html
@@ -42,7 +42,15 @@
 
             <nav>
                 <ul>
-                    <li><a href="#">Blusas e Camisas</a></li>
+                    <li>
+                        <a href="#">Blusas e Camisas</a>
+                        <ul>
+                            <li><a href="#">Manga curta</a></li>
+                            <li><a href="#">Manga comprida</a></li>
+                            <li><a href="#">Camisa social</a></li>
+                            <li><a href="#">Camisa casual</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">Calças</a></li>
                     <li><a href="#">Saias</a></li>
                     <li><a href="#">Vestidos</a></li>
@@ -150,5 +158,16 @@
         </ol>
         </section>
     </div>
+    <footer>
+        <div class="container">
+            <img src="img/logo-rodape.png" alt="Logo Mirror Fashion">
+
+            <ul class="social">
+                <li><a href="http://facebook.com/mirrorfashion">Facebook</a></li>
+                <li><a href="http://twitter.com/mirrorfashion">Twitter</a></li>
+                <li><a href="http://plus.google.com/mirrorfashion">Google+</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
