--- a/sobre.html
+++ b/sobre.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Sobre Mirror Fashion</title>
     <link rel="stylesheet" href="css/sobre.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <img src="img/logo.png" alt="logotipo mirror fashion">
@@ -63,9 +64,16 @@
         <li>Presente em 124 países</li>
         <li>Mais de um milhão de funcionários em todo o mundo</li>
     </ul>
-    <div id="rodape">
-        <img src="img/logo.png">
-        &copy; Copyright Mirror Fashion
-    </div>
+    <footer>
+        <div class="container">
+            <img src="img/logo-rodape.png" alt="Logo Mirror Fashion">
+
+            <ul class="social">
+                <li><a href="http://facebook.com/mirrorfashion">Facebook</a></li>
+                <li><a href="http://twitter.com/mirrorfashion">Twitter</a></li>
+                <li><a href="http://plus.google.com/mirrorfashion">Google+</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
