--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Mirror Fashion</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/mobile.css" media="(max-width: 939px)">
 </head>
 <body>
     <header class="container">
